<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/storage_and_privacy_settings">

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="external_folder_access_prompt_enabled"
        android:summary="@string/external_folder_access_prompt_setting_summary"
        android:title="@string/external_folder_access_prompt_setting_title" />

    <Preference
        android:key="manage_external_folder_grants"
        android:summary="@string/manage_external_folder_grants_summary_none"
        android:title="@string/manage_external_folder_grants_title" />

    <Preference
        android:key="reset_external_folder_grants"
        android:summary="@string/reset_external_folder_grants_summary"
        android:title="@string/reset_external_folder_grants_title" />

    <Preference
        android:key="advanced_full_storage_mode"
        android:summary="@string/advanced_full_storage_mode_summary"
        android:title="@string/advanced_full_storage_mode_title" />

    <ListPreference
        android:defaultValue="30"
        android:entries="@array/trash_retention_days_entries"
        android:entryValues="@array/trash_retention_days_values"
        android:key="trash_retention_days"
        android:summary="@string/trash_retention_days_summary_default"
        android:title="@string/trash_retention_days_title" />

</PreferenceScreen>