<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/display_settings">

        <ListPreference
            android:defaultValue="date_desc"
            android:entries="@array/sort_entries"
            android:entryValues="@array/sort_values"
            android:key="default_sort_order"
            android:summary="@string/sort_by_date_desc"
            android:title="@string/default_sort_order" />

        <ListPreference
            android:defaultValue="grid"
            android:entries="@array/view_mode_entries"
            android:entryValues="@array/view_mode_values"
            android:key="default_view_mode"
            android:summary="@string/thumbnail_view"
            android:title="@string/default_view_mode" />

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/filename_max_lines_entries"
            android:entryValues="@array/filename_max_lines_values"
            android:key="filename_max_lines"
            android:summary="@string/filename_max_lines_1"
            android:title="@string/filename_max_lines_title" />

        <ListPreference
            android:defaultValue="3"
            android:entries="@array/zoom_max_scale_entries"
            android:entryValues="@array/zoom_max_scale_values"
            android:key="zoom_max_scale"
            android:summary="@string/zoom_scale_3x"
            android:title="@string/zoom_max_scale_title" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/action_bar_settings">

        <Preference
            android:key="customize_action_bar"
            android:summary="@string/customize_action_bar_summary"
            android:title="@string/customize_action_bar" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/quick_rename_settings">

        <ListPreference
            android:defaultValue="30"
            android:entries="@array/rename_history_count_entries"
            android:entryValues="@array/rename_history_count_values"
            android:key="rename_history_count"
            android:summary="30 items"
            android:title="@string/rename_history_count" />

        <ListPreference
            android:defaultValue="time_desc"
            android:entries="@array/rename_sort_entries"
            android:entryValues="@array/rename_sort_values"
            android:key="rename_default_sort"
            android:summary="@string/time_descending"
            android:title="@string/rename_default_sort" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/general_settings">

        <ListPreference
            android:defaultValue="auto"
            android:entries="@array/theme_entries"
            android:entryValues="@array/theme_values"
            android:key="theme_preference"
            android:summary="@string/theme_summary"
            android:title="@string/theme_title" />

        <com.litegallery.ColorThemePreference
            android:defaultValue="blue"
            android:entries="@array/color_theme_entries"
            android:entryValues="@array/color_theme_values"
            android:key="color_theme_preference"
            android:summary="@string/color_theme_summary"
            android:title="@string/color_theme_title" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="restore_brightness"
            android:summary="@string/restore_brightness_summary"
            android:title="@string/restore_brightness_title" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="restore_volume"
            android:summary="@string/restore_volume_summary"
            android:title="@string/restore_volume_title" />

    </PreferenceCategory>

</PreferenceScreen>